--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,8 @@
       ],
       "rules": {
         "semi": ["error", "never"],
+        "@typescript-eslint/no-explicit-any": "off",
+        "@typescript-eslint/ban-ts-comment": "off",
         "@angular-eslint/directive-selector": [
           "error",
           {
