--- a/angular.json
+++ b/angular.json
@@ -32,6 +32,7 @@
             "styles": [
               "node_modules/gridstack/dist/gridstack.min.css",
               "node_modules/gridstack/dist/gridstack-extra.min.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.scss"
             ],
             "scripts": []
