--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "bootstrap": "^5.3.1",
     "gridstack": "^8.4.0",
     "lodash-es": "^4.17.21",
     "rxjs": "~7.8.0",
@@ -34,6 +35,7 @@
     "@angular-eslint/template-parser": "16.1.0",
     "@angular/cli": "~16.1.5",
     "@angular/compiler-cli": "^16.1.0",
+    "@types/bootstrap": "^5.2.6",
     "@types/jasmine": "~4.3.0",
     "@types/lodash-es": "^4.17.8",
     "@typescript-eslint/eslint-plugin": "5.62.0",
