--- a/angular.json
+++ b/angular.json
@@ -33,6 +33,8 @@
               "node_modules/gridstack/dist/gridstack.min.css",
               "node_modules/gridstack/dist/gridstack-extra.min.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
+              "node_modules/primeng/resources/primeng.min.css",
               "src/styles.scss"
             ],
             "scripts": []
