--- a/angular.json
+++ b/angular.json
@@ -30,6 +30,7 @@
               "src/assets"
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/indigo-pink.css",
               "node_modules/gridstack/dist/gridstack.min.css",
               "node_modules/gridstack/dist/gridstack-extra.min.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
