--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "deploy": "sh deploy.sh",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint"
@@ -43,6 +44,7 @@
     "@types/lodash-es": "^4.17.8",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
+    "angular-cli-ghpages": "^0.6.2",
     "eslint": "^8.44.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
