--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@angular/router": "^16.1.0",
     "bootstrap": "^5.3.1",
     "gridstack": "^8.4.0",
+    "highcharts": "^11.1.0",
+    "highcharts-angular": "^3.1.2",
     "lodash-es": "^4.17.21",
     "primeng": "^16.1.0",
     "rxjs": "~7.8.0",
