maps and graphs commit one

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "bootstrap": "^5.3.1",
-    "date-fns": "^2.30.0",
+    "color": "^4.2.3",
     "gridstack": "^8.4.0",
     "highcharts": "^11.1.0",
     "highcharts-angular": "^3.1.2",
@@ -44,6 +44,7 @@
     "@angular/cli": "~16.1.5",
     "@angular/compiler-cli": "^16.1.0",
     "@types/bootstrap": "^5.2.6",
+    "@types/color": "^3.0.3",
     "@types/jasmine": "~4.3.0",
     "@types/lodash-es": "^4.17.8",
     "@typescript-eslint/eslint-plugin": "5.62.0",
