--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "highcharts": "^11.1.0",
     "highcharts-angular": "^3.1.2",
     "lodash-es": "^4.17.21",
+    "ngx-toastr": "^17.0.2",
     "primeng": "^16.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
